--- a/app/build.gradle
+++ b/app/build.gradle
@@ -170,6 +170,7 @@ dependencies {
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.1') {
         transitive = true
     }
+    implementation 'com.github.sharish:ShimmerRecyclerView:v1.3' // ????????????? sem funcionar em Seguindo
     //Kotlin
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
 
