--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,17 +128,17 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
     //Google
-    implementation 'com.google.android.gms:play-services-location:11.2.2'
-    implementation 'com.google.android.gms:play-services-gcm:11.2.2'
-    implementation 'com.google.android.gms:play-services-analytics:11.2.2'
-    implementation 'com.google.android.gms:play-services-auth:11.2.2'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-gcm:16.1.0'
+    implementation 'com.google.android.gms:play-services-analytics:16.0.8'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
     //Firebases
-    implementation 'com.google.firebase:firebase-ads:11.2.2'
-    implementation 'com.google.firebase:firebase-config:11.2.2'
-    implementation 'com.google.firebase:firebase-auth:11.2.2'
-    implementation 'com.google.firebase:firebase-database:11.2.2'
-    implementation 'com.google.firebase:firebase-invites:11.2.2'
-    implementation 'com.google.firebase:firebase-perf:11.2.2'
+    implementation 'com.google.firebase:firebase-ads:17.2.0'
+    implementation 'com.google.firebase:firebase-config:16.4.1'
+    implementation 'com.google.firebase:firebase-auth:16.2.0'
+    implementation 'com.google.firebase:firebase-database:16.1.0'
+    implementation 'com.google.firebase:firebase-invites:16.1.1'
+    implementation 'com.google.firebase:firebase-perf:16.2.4'
     //Android
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta4'
@@ -173,6 +173,7 @@ dependencies {
     implementation 'com.github.sharish:ShimmerRecyclerView:v1.3' // ????????????? sem funcionar em Seguindo
     //Kotlin
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
+    implementation 'com.google.android.gms:play-services-ads:17.2.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
