--- a/app/build.gradle
+++ b/app/build.gradle
@@ -131,20 +131,23 @@ dependencies {
     implementation 'com.google.android.gms:play-services-analytics:16.0.8'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     //Firebases
+    //implementation platform('com.google.firebase:firebase-bom:18.1.0')
+    //Atualiza firebase automaticametne. Falhando
+
     implementation 'com.google.firebase:firebase-ads:17.2.0'
     implementation 'com.google.firebase:firebase-config:16.4.1'
     implementation 'com.google.firebase:firebase-auth:16.2.0'
     implementation 'com.google.firebase:firebase-database:16.1.0'
     implementation 'com.google.firebase:firebase-invites:16.1.1'
-    implementation 'com.google.firebase:firebase-perf:16.2.4'
+    implementation 'com.google.firebase:firebase-perf:16.2.5'
     //Android
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta4'
-    implementation 'com.android.support:recyclerview-v7:27.0.2'
-    implementation 'com.android.support:design:27.0.2'
-    implementation 'com.android.support:support-v4:27.0.2'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
-    implementation 'com.android.support:palette-v7:27.0.2'
+    implementation 'com.android.support:palette-v7:27.1.1'
     implementation 'org.slf4j:slf4j-android:1.7.26'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
