--- a/app/build.gradle
+++ b/app/build.gradle
@@ -152,7 +152,7 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     //Terceiros
-    implementation 'info.movito:themoviedbapi:1.4'
+    compile group: 'info.movito', name: 'themoviedbapi', version:'1.9'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.squareup:otto:1.3.8'
     implementation 'com.github.clans:fab:1.6.4'
