--- a/app/build.gradle
+++ b/app/build.gradle
@@ -152,7 +152,7 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     //Terceiros
-    compile group: 'info.movito', name: 'themoviedbapi', version:'1.9'
+    implementation group: 'info.movito', name: 'themoviedbapi', version:'1.9'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.squareup:otto:1.3.8'
     implementation 'com.github.clans:fab:1.6.4'
@@ -160,7 +160,7 @@ dependencies {
     implementation 'me.relex:circleindicator:1.2.2@aar'
     implementation 'com.squareup.okhttp3:okhttp:4.0.0-alpha02'
     implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.onesignal:OneSignal:[3.9.1, 3.99.99]'
+    implementation 'com.onesignal:OneSignal:3.10.8'
     implementation 'com.facebook.android:facebook-android-sdk:4.16.1'
     implementation 'com.github.apl-devs:appintro:v4.2.0'
     implementation 'com.github.medyo:fancybuttons:1.8.2'
