--- a/app/.gitignore
+++ b/app/.gitignore
@@ -3,6 +3,8 @@ app/src/main/java/utils/Config.java
 app/config.txt
 app/keystore.jks
 filme.iml
+.gradle/wrapper/gradle-wrapper.properties
+.idea/misc.xml
 
 /build
 # Built application files
@@ -21,7 +23,7 @@ gen/
 out/
 
 # Gradle files
-.gradle/
+.gradle/*
 build/
 
 # Local configuration file (sdk path, etc)
