--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,10 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'io.fabric.tools:gradle:1.28.0'
-        classpath 'com.android.tools.build:gradle:3.4.1'
-        classpath 'com.google.firebase:firebase-plugins:1.2.0'
-        classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'io.fabric.tools:gradle:1.28.1'
+        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'com.google.firebase:perf-plugin:1.3.1'
+        classpath 'com.google.gms:google-services:4.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:0.12.2'
 
