--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.41'
+    ext.kotlin_version = '1.3.31'
     repositories {
         jcenter()
         mavenCentral()
@@ -12,7 +12,7 @@ buildscript {
     }
     dependencies {
         classpath 'io.fabric.tools:gradle:1.28.1'
-        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'com.android.tools.build:gradle:3.5.0-rc03'
         classpath 'com.google.firebase:perf-plugin:1.3.1'
         classpath 'com.google.gms:google-services:4.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
