--- a/app/build.gradle
+++ b/app/build.gradle
@@ -170,6 +170,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1'
     implementation 'androidx.fragment:fragment-ktx:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation "android.arch.lifecycle:extensions:1.1.1"
 
     // configurations.all {exclude group: 'com.android.support', module: 'support-v13'}
 }
