--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -159,7 +159,7 @@
         </activity>
 
         <activity
-            android:name="activity.TemporadaActivity"
+            android:name="temporada.TemporadaActivity"
             android:parentActivityName="main.MainActivity">
 
             <meta-data
