alterado metodos do AdMob, usando cod de anuncio de teste. Necessario usar os do APP

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,7 +81,7 @@
         </activity>
 
         <activity
-            android:name="listafilmes.activity.FilmesActivity"
+            android:name="listafilmes.activity.MoviesActivity"
             android:parentActivityName="main.MainActivity">
 
             <meta-data
