--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,6 +124,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-analytics:17.0.0'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
     implementation 'com.google.android.gms:play-services-ads:18.2.0'
+
+    //implementation 'com.google.android.ads:mediation-test-suite:1.1.1'
     //Firebases
     //implementation platform('com.google.firebase:firebase-bom:18.1.0')
     //Atualiza firebase automaticametne. Falhando
@@ -156,14 +158,14 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.1.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.onesignal:OneSignal:3.10.8'
-    implementation 'com.facebook.android:facebook-android-sdk:4.16.1'
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
     implementation 'com.github.apl-devs:appintro:v4.2.0'
     implementation 'com.github.medyo:fancybuttons:1.9.1'
     implementation 'io.reactivex:rxjava:1.3.8'
     implementation 'com.artemzin.rxjava:proguard-rules:1.3.3.0'
     implementation 'io.reactivex:rxandroid:1.2.1'
     implementation 'com.ramotion.foldingcell:folding-cell:1.2.3'
-    implementation('com.crashlytics.sdk.android:crashlytics:2.9.1') {
+    implementation('com.crashlytics.sdk.android:crashlytics:2.10.1') {
         transitive = true
     }
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1'
