--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,8 @@ android {
         applicationId "br.com.icaro.filme"
         minSdkVersion 14
         targetSdkVersion 28
-        versionCode 67
-        versionName "6.6"
+        versionCode 68
+        versionName "6.7"
 
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -136,8 +136,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.0.0'
     implementation 'com.google.firebase:firebase-invites:17.0.0'
     implementation 'com.google.firebase:firebase-perf:19.0.0'
+    implementation 'com.google.firebase:firebase-messaging:20.0.0'
     //Android
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
@@ -147,7 +148,7 @@ dependencies {
     implementation 'org.slf4j:slf4j-android:1.7.28'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
-    implementation 'androidx.core:core-ktx:1.0.2'
+    implementation 'androidx.core:core-ktx:1.1.0'
     //Terceiros
     implementation group: 'info.movito', name: 'themoviedbapi', version: '1.9'
     implementation 'com.squareup.picasso:picasso:2.71828'
