--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,20 +122,14 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
     //Google
-    //implementation 'com.google.android.gms:play-services-gcm:16.1.0'
     implementation 'com.google.android.gms:play-services-analytics:17.0.0'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
     implementation 'com.google.android.gms:play-services-ads:18.2.0'
-
-    //implementation 'com.google.android.ads:mediation-test-suite:1.1.1'
-    //Firebases
-    //implementation platform('com.google.firebase:firebase-bom:18.1.0')
-    //Atualiza firebase automaticametne. Falhando
-
+    //FireBase
     implementation 'com.google.firebase:firebase-ads:18.2.0'
-    implementation 'com.google.firebase:firebase-config:19.0.0'
-    implementation 'com.google.firebase:firebase-auth:19.0.0'
-    implementation 'com.google.firebase:firebase-database:19.0.0'
+    implementation 'com.google.firebase:firebase-config:19.0.2'
+    implementation 'com.google.firebase:firebase-auth:19.1.0'
+    implementation 'com.google.firebase:firebase-database:19.1.0'
     implementation 'com.google.firebase:firebase-dynamic-links:19.0.0'
     implementation 'com.google.firebase:firebase-perf:19.0.0'
     implementation 'com.google.firebase:firebase-messaging:20.0.0'
@@ -161,7 +155,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.1.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.onesignal:OneSignal:3.10.8'
-    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+    implementation 'com.facebook.android:facebook-android-sdk:5.8.0'
     implementation 'com.github.apl-devs:appintro:v4.2.0'
     implementation 'com.github.medyo:fancybuttons:1.9.1'
     implementation 'io.reactivex:rxjava:1.3.8'
@@ -175,6 +169,7 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation 'com.facebook.android:facebook-android-sdk:5.8.0'
 
     // configurations.all {exclude group: 'com.android.support', module: 'support-v13'}
 }
