--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -123,7 +123,7 @@
         </activity>
 
         <activity
-            android:name="filme.activity.FilmeActivity"
+            android:name="filme.activity.MovieDetailsActivity"
             android:parentActivityName="main.MainActivity"
             android:theme="@style/AppTheme.NoActionBar.NavDrawer">
 
