--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.31'
+    ext.kotlin_version = '1.3.50'
     repositories {
         jcenter()
         mavenCentral()
@@ -12,11 +12,11 @@ buildscript {
     }
     dependencies {
         classpath 'io.fabric.tools:gradle:1.28.1'
-        classpath 'com.android.tools.build:gradle:3.5.0-rc03'
+        classpath 'com.android.tools.build:gradle:3.6.0-alpha12'
         classpath 'com.google.firebase:perf-plugin:1.3.1'
-        classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'com.google.gms:google-services:4.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:0.12.2'
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:0.12.3'
 
     }
 }
