--- a/app/build.gradle
+++ b/app/build.gradle
@@ -145,6 +145,8 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'androidx.core:core-ktx:1.1.0'
+    implementation "com.android.support:design:28.0.0"
+
     //Terceiros
     implementation group: 'info.movito', name: 'themoviedbapi', version: '1.9'
     implementation 'com.squareup.picasso:picasso:2.71828'
