--- a/app/build.gradle
+++ b/app/build.gradle
@@ -172,8 +172,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation 'com.facebook.android:facebook-android-sdk:5.8.0'
-
-    // configurations.all {exclude group: 'com.android.support', module: 'support-v13'}
+    //Teste
+    testImplementation "io.mockk:mockk:$mockk"
 }
 
 apply plugin: 'com.google.gms.google-services'
