--- a/app/build.gradle
+++ b/app/build.gradle
@@ -158,7 +158,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.onesignal:OneSignal:3.10.8'
     implementation 'com.facebook.android:facebook-android-sdk:5.8.0'
-    implementation 'com.github.apl-devs:appintro:v4.2.0'
+    implementation 'com.github.AppIntro:AppIntro:5.1.0'
     implementation 'com.github.medyo:fancybuttons:1.9.1'
     implementation 'io.reactivex:rxjava:1.3.8'
     implementation 'com.artemzin.rxjava:proguard-rules:1.3.3.0'
