--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    ext.kotlin_version = '1.3.72'
     ext.mockk = '1.9.3'
     repositories {
         jcenter()
@@ -13,7 +13,7 @@ buildscript {
     }
     dependencies {
         classpath 'io.fabric.tools:gradle:1.28.1'
-        classpath 'com.android.tools.build:gradle:4.1.0-alpha06'
+        classpath 'com.android.tools.build:gradle:4.1.0-beta01'
         classpath 'com.google.firebase:perf-plugin:1.3.1'
         classpath 'com.google.gms:google-services:4.3.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
