adicionado loading na tela de Temporaadas.
criado metodo de loading generico na viewmodel.
criado ext para criar UserEp apartir do EpisodesItem

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -160,7 +160,7 @@
         </activity>
 
         <activity
-            android:name="temporada.TemporadaActivity"
+            android:name="temporada.SeasonActivity"
             android:parentActivityName="main.MainActivity">
 
             <meta-data
