--- a/app/build.gradle
+++ b/app/build.gradle
@@ -177,6 +177,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation 'com.facebook.android:facebook-android-sdk:5.8.0'
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
     //Teste
     testImplementation "io.mockk:mockk:$mockk"
 }
