refatorado listas do usuario com novas classes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -360,6 +360,7 @@
         </activity>
 
         <activity android:name="desenvolvimento.Desenvolvimento" />
+        <activity android:name="favority.YourListActivity" />
 
         <service
             android:name="onsignal.CustomNotificationExtenderService"
