--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,19 @@
-language: android
-jdk: oraclejdk8
-dist: trusty
-on:
-  push:
-    branches:
-    - master
-android:
-  components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
-    # - tools
-    # - platform-tools
+on: push
 
-    # The BuildTools version used by your project
-    - build-tools-28.0.3
-
-    # The SDK version used to compile your project
-    - android-28
-
-    # Additional components
-    - extra
-  #    - extra-google-google_play_services
-  #    - extra-google-m2repository
-  #    - extra-android-m2repository
-  #
-  #    # Specify at least one system image,
-  #    # if you need to run emulator(s) during your tests
-  #    - sys-img-x86-android-26
-  #    - sys-img-armeabi-v7a-android-17
-  licenses:
-    - 'android-sdk-preview-license-52d11cd5'
-    - 'android-sdk-license-.+'
-    - 'google-gdk-license-.+'
-
-before_script:
-  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-  - emulator -avd test -no-skin -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - run: ./gradlew build assembleDebugAndroidTest # "build" includes lint and test.
+      - uses: actions/upload-artifact@v1
+        with:
+          name: app-debug
+          path: app/build/outputs/apk/debug/app-debug.apk
+      - uses: actions/upload-artifact@v1
+        with:
+          name: app-debug-androidTest
+          path: app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk
