--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,16 +65,12 @@ jobs:
           java-version: 1.8
 
       - name: Build with Gradle
-        run: ./gradlew build    
-      - name: OMDB api
-        run:  export OMDBAPI_API_KEY:${{ secrets.OMDBAPI_API_KEY }}      
-      - name: OMDB api
-        run:  export TMDB_API_KEY:${{ secrets.TMDB_API_KEY }}
-      - name: OMDB api
-        run:  export TMDB_API_KEY2:${{ secrets.TMDB_API_KEY2 }}
-      - name: OMDB api
-        run:  export YOUTUBE_API_KEY:${{ secrets.YOUTUBE_API_KEY }}
-
+        run: |
+         export OMDBAPI_API_KEY:${{ secrets.OMDBAPI_API_KEY }}      
+         export TMDB_API_KEY:${{ secrets.TMDB_API_KEY }}
+         export TMDB_API_KEY2:${{ secrets.TMDB_API_KEY2 }}
+         export YOUTUBE_API_KEY:${{ secrets.YOUTUBE_API_KEY }}
+         ./gradlew build       
 
   apk:
     name: Debug APK
