--- a/app/build.gradle
+++ b/app/build.gradle
@@ -187,10 +187,10 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation 'com.facebook.android:facebook-android-sdk:5.8.0'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    implementation 'io.github.cdimascio:java-dotenv:5.2.1'
+
     //Teste
     testImplementation "io.mockk:mockk:$mockk"
-
-//    implementation 'io.github.cdimascio:java-dotenv:5.2.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
