--- a/app/.gitignore
+++ b/app/.gitignore
@@ -5,6 +5,7 @@ app/keystore.jks
 filme.iml
 .gradle/wrapper/gradle-wrapper.properties
 .idea/misc.xml
+app/src/main/assets/env
 
 /build
 # Built application files
