--- a/app/.gitignore
+++ b/app/.gitignore
@@ -5,6 +5,7 @@ app/keystore.jks
 filme.iml
 .gradle/wrapper/gradle-wrapper.properties
 .idea/misc.xml
+app/src/main/assets/env
 
 /build
 # Built application files
@@ -72,3 +73,8 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+
+projectFilesBackup/*
+projectFilesBackup/.idea/*
+reports/*
+PopCornShow.iml
