--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ filme.iml
 .gradle/wrapper/gradle-wrapper.properties
 .idea/misc.xml
 ktlint-report-in-checkstyle-format.xml
-
+app/src/main/assets/env
 
 /build
 # Built application files
@@ -35,7 +35,6 @@ local.properties
 hs_err_pid25020.log
 
 # Local configuration file (sdk path, etc)
-local.properties
 app/flavor21/
 atlassian-ide-plugin.xml
 
@@ -61,7 +60,6 @@ captures/
 .idea/*
 .idea/compiler.xml
 .idea/encodings.xml
-.idea/misc.xml
 
 
 
@@ -88,3 +86,6 @@ fastlane/test_output
 fastlane/readme.md
 
 gradle/wrapper/gradle-wrapper\.properties
+
+projectFilesBackup/*
+projectFilesBackup/.idea/workspace.xml
