--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
 
     defaultConfig {
         applicationId "br.com.icaro.filme"
-        minSdkVersion    16
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 84
         versionName "8.4"
@@ -72,7 +72,7 @@ android {
                     ext.enableCrashlytics = false
                     ext.alwaysUpdateBuildId = false
                     crunchPngs false
-                    manifestPlaceholders = [crashlyticsCollectionEnabled:"false"]
+                    manifestPlaceholders = [crashlyticsCollectionEnabled: "false"]
                 }
 
                 release {
@@ -83,9 +83,8 @@ android {
                     zipAlignEnabled true
                     //proguard com restrição ao log.ver
                     debuggable false
-                    manifestPlaceholders = [crashlyticsCollectionEnabled:"true"]
+                    manifestPlaceholders = [crashlyticsCollectionEnabled: "true"]
                 }
-
             }
 
             flavorDimensions "color"
@@ -138,7 +137,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.2.0'
     implementation 'com.google.firebase:firebase-dynamic-links:19.0.0'
     implementation 'com.google.firebase:firebase-perf:19.0.7'
-//    implementation 'com.google.firebase:firebase-messaging:20.0.1'
+    implementation 'com.google.firebase:firebase-messaging:20.2.3'
     //Android
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
