--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,55 +1,65 @@
 name: Android CI
-on:
-  push:
-    branches: master
-  pull_request:
-    branches: master
-
+true:
+    push:
+        branches: master
+    pull_request:
+        branches: master
 jobs:
-  
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-
-    steps:  
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Validate Gradle Wrapper
-        uses: gradle/wrapper-validation-action@v1
-      - name: Set up JDK
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-
-      - name: Build with Gradle
-        run: |
-         export OMDBAPI_API_KEY=${{ secrets.OMDBAPI_API_KEY }}      
-         export TMDB_API_KEY=${{ secrets.TMDB_API_KEY }}
-         export TMDB_API_KEY2=${{ secrets.TMDB_API_KEY2 }}
-         export YOUTUBE_API_KEY=${{ secrets.YOUTUBE_API_KEY }}
-          ./gradlew build --stacktrace
-  apk:
-    name: Debug APK
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Validate Gradle Wrapper
-        uses: gradle/wrapper-validation-action@v1
-
-      - name: Set up JDK
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-
-      - name: Build debug APK
-        run: ./gradlew assembleDebug
-
-      - name: Upload APK
-        uses: actions/upload-artifact@v1
-        with:
-          name: app-debug
-          path: app/build/outputs/apk/debug/app-debug.apk
+    build:
+        name: Build
+        runs-on: ubuntu-latest
+        steps:
+        -   name: Checkout
+            uses: actions/checkout@v2
+        -   name: Validate Gradle Wrapper
+            uses: gradle/wrapper-validation-action@v1
+        -   name: Set up JDK
+            uses: actions/setup-java@v1
+            with:
+                java-version: 1.8
+        -   name: Build with Gradle
+            run: "export OMDBAPI_API_KEY=${{ secrets.OMDBAPI_API_KEY }}      \nexport\
+                \ TMDB_API_KEY=${{ secrets.TMDB_API_KEY }}\nexport TMDB_API_KEY2=${{\
+                \ secrets.TMDB_API_KEY2 }}\nexport YOUTUBE_API_KEY=${{ secrets.YOUTUBE_API_KEY\
+                \ }}\n ./gradlew build --stacktrace\n"
+    apk:
+        name: Debug APK
+        runs-on: ubuntu-latest
+        steps:
+        -   name: Checkout
+            uses: actions/checkout@v2
+        -   name: Validate Gradle Wrapper
+            uses: gradle/wrapper-validation-action@v1
+        -   name: Set up JDK
+            uses: actions/setup-java@v1
+            with:
+                java-version: 1.8
+        -   name: Build debug APK
+            run: ./gradlew assembleDebug
+        -   name: Upload APK
+            uses: actions/upload-artifact@v1
+            with:
+                name: app-debug
+                path: app/build/outputs/apk/debug/app-debug.apk
+    lint:
+        name: Lint
+        runs-on: ubutun-latest
+        steps:
+        -   name: Checkout
+            uses: actions/checkout@v2
+        -   name: Validate Gradle Wrapper
+            uses: gradle/wrapper-validation-action@v1
+        -   name: Set up JDK
+            uses: actions/setup-java@v1
+            with:
+                java-version: 1.8
+        -   name: Run Lint
+            run: ./gradlew lint
+        -   name: Copy file
+            uses: canastro/copy-action@0.0.2
+            with:
+                name: lint-arq
+                # Source file
+                source: lint-results
+                # Target file
+                target: app/build/reports/lint-results.html
