--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
                 path: app/build/outputs/apk/debug/app-debug.apk
     lint:
         name: Lint
-        runs-on: ubutun-latest
+        runs-on: ubuntu-latest
         steps:
         -   name: Checkout
             uses: actions/checkout@v2
